Fix spacing for news_and_announcements titles.

--- a/docroot/themes/custom/bos_theme/css/bos_theme_overrides.css
+++ b/docroot/themes/custom/bos_theme/css/bos_theme_overrides.css
@@ -735,9 +735,6 @@ What: Compresses the top/bottom padding set by .component-section in public.css.
 .paragraphs-item-city-score-dashboard.component-section {
   padding: 0;
 }
-.component-section .sh {
-   margin: 0;
- }
 
 /*
 David:
